# ERP-Max

./: .gitignore  DESIGN_DIRECTION.md  FINDINGS.md  PROJECT_MAP.md  README.md  files_to_count.txt
docs/: API.md  ARCHITECTURE.md  BACKEND.md  DATABASE.md  FRONTEND.md  TECHNICAL_AUDIT.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  modules_config.ts
frontend/src/api/: matching.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/20240101_initial_schema/: down.sql  up.sql
src-tauri/migrations/20251218_create_inventory_table/: down.sql  up.sql
src-tauri/migrations/20251222_create_settings_table/: up.sql
src-tauri/migrations/20251223_add_archived_field/: down.sql  up.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/migration/: detector.rs  mod.rs  test_compilation.rs
src-tauri/src/migration/strategies/: archived_fields.rs  cleanup.rs  inventory.rs  mod.rs  product_matching.rs  settings.rs
src-tauri/src/modules/: dashboard.rs  mod.rs
src-tauri/src/modules/catalogue/: commands.rs  db.rs  mod.rs  models.rs  service.rs
src-tauri/src/modules/dashboard/: commands.rs  db.rs  models.rs
src-tauri/src/modules/product_matching/: commands.rs  db.rs  embeddings.rs  mod.rs  models.rs  parser.rs  service.rs
src-tauri/src/modules/sales/: commands.rs  db.rs  mod.rs  models.rs  service.rs
src-tauri/src/modules/settings/: db.rs  mod.rs  models.rs  service.rs
src-tauri/src/modules/stock/: commands.rs  db.rs  mod.rs  models.rs  service.rs
(+43 files in other folders)
