[package]
name = "app"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.1", features = [] }
tauri-plugin-log = "2"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "migrate"] }
tokio = { version = "1.37", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-fs = "2.4.0"
fs = "0.0.5"
printpdf = "0.5"
bcrypt = "0.15"

# Product Matching dependencies
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
calamine = "0.26"
